--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  provider: ^5.0.0
+  google_fonts: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  google_fonts: ^2.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
