--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,11 @@ dependencies:
   provider: ^5.0.0
   sqflite: ^2.0.0
   unicons: ^2.0.1
+  intl: ^0.17.0
   
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
