fix semester buttons, add calendar month

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
+  http: ^0.13.3
   introduction_screen: ^2.1.0
   path_provider: ^2.0.1
   provider: ^5.0.0
   sqflite: ^2.0.0
   unicons: ^2.0.1
+  web_scraper: ^0.1.4
   
   flutter:
     sdk: flutter
