--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  flutter_colorpicker: ^0.4.0
   google_fonts: ^2.0.0
   http: ^0.13.3
   intl: ^0.17.0
