--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   flutter_colorpicker: ^0.4.0
+  flutter_hsvcolor_picker: ^0.0.1
   google_fonts: ^2.0.0
   http: ^0.13.3
   intl: ^0.17.0
