--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^2.0.0
   unicons: ^2.0.1
   web_scraper: ^0.1.4
+  url_launcher: ^6.0.6
   
   flutter:
     sdk: flutter
